1.1.d
- Added /h alias for /home
- Added /v alias for /visit

1.1.c
- Adjusted an entry in translation
- Now if you have WorldEdit installed, the terrain where the post is build will be somewhat accommodated for it to be placed (softdepend)
- Fixed the mod not being able to detect GriefDefender installed

1.1.b
- Added brazilean portuguese
- Changed to only-server mod, clients won't be able to run it
- Added an icon
- The mod can now be used in 1.20, 1.20.1 and 1.20.2

1.1.a:
- Fixed teleport locations being offsetted
- Fixed /buildposts
- Fixed /buildposts not being able to be used without GD
- /buildposts notification in case you didn't set your worldborder