@@ -11,7 +11,7 @@ loader_version = 0.14.22
 fabric_version = 0.89.3+1.20.2
 
 # Mod Properties
-mod_version = 1.1.c
+mod_version = 1.1.e
 maven_group = com.kryeit
 archives_base_name = Telepost
 
