@@ -21,7 +21,7 @@ public class Post {
 
     public static World WORLD = MinecraftServerSupplier.getServer().getOverworld();
 
-    public static final int GAP = 2000;
+    public static final int GAP = 100;
     public static final int WIDTH = 23;
     private final int x;
     private final int z;
